cargo_check_ext_app_2.log
warning: unused import: `Pixel`
 --> crates/forge-test-tools/src/screenshot.rs:1:24
  |
1 | use image::{RgbaImage, Pixel};
  |                        ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ElementState` and `MouseButton`
 --> crates/forge-test-tools/src/input_sim.rs:1:20
  |
1 | use winit::event::{ElementState, MouseButton, WindowEvent};
  |                    ^^^^^^^^^^^^  ^^^^^^^^^^^

warning: `forge-test-tools` (lib) generated 2 warnings (run `cargo fix --lib -p forge-test-tools` to apply 2 suggestions)
    Checking forge-app v0.1.0 (/app/crates/forge-app)
warning: variable does not need to be mutable
   --> crates/forge-app/src/application.rs:371:13
    |
371 |         let mut file_explorer = crate::file_explorer::FileExplorer::new();
    |             ----^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0499]: cannot borrow `*self` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3286:17
     |
2442 |         let state = match self.state.as_mut() {
     |                           ---------- first mutable borrow occurs here
...
3286 |                 self.render(
     |                 ^^^^ second mutable borrow occurs here
3287 |                     state,
     |                     ----- first borrow later used here

error[E0499]: cannot borrow `self.bottom_panel` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3290:21
     |
3286 |                 self.render(
     |                 ---- ------ first borrow later used by call
     |                 |
     |                 first mutable borrow occurs here
...
3290 |                     &mut self.bottom_panel,
     |                     ^^^^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `self.search_panel` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3295:21
     |
3286 |                 self.render(
     |                 ---- ------ first borrow later used by call
     |                 |
     |                 first mutable borrow occurs here
...
3295 |                     &mut self.search_panel,
     |                     ^^^^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here

error[E0499]: cannot borrow `self.notifications` as mutable more than once at a time
    --> crates/forge-app/src/application.rs:3297:21
     |
3286 |                 self.render(
     |                 ---- ------ first borrow later used by call
     |                 |
     |                 first mutable borrow occurs here
...
3297 |                     &mut self.notifications,
     |                     ^^^^^^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here

For more information about this error, try `rustc --explain E0499`.
warning: `forge-app` (bin "forge") generated 1 warning
error: could not compile `forge-app` (bin "forge") due to 4 previous errors; 1 warning emitted
